Add initial migrations

--- a/Trustify.Backend/Trustify.Backend.FeaturesService/appsettings.json
+++ b/Trustify.Backend/Trustify.Backend.FeaturesService/appsettings.json
@@ -1,7 +1,13 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=DESKTOP-BBSNPOF\\MSSQLSERVER01;Database=Trustify;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DatabaseProvider": "SqlServer"
+    //"Database": "Host=localhost;Database=Trustify;Username=postgres;Password=admin",
+    //"DatabaseProvider": "PostgreSql"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Information",  
       "Microsoft.AspNetCore": "Warning"
     }
   },
