--- a/Trustify.Backend/Trustify.Backend.FeaturesService/Trustify.Backend.FeaturesService.csproj
+++ b/Trustify.Backend/Trustify.Backend.FeaturesService/Trustify.Backend.FeaturesService.csproj
@@ -16,6 +16,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="4.0.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+    <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
   </ItemGroup>
@@ -24,6 +33,10 @@
     <ProjectReference Include="..\Trustify.Backend.Features.Providers.MSSQL\Trustify.Backend.Features.Providers.MSSQL.csproj" />
     <ProjectReference Include="..\Trustify.Backend.Features.Providers.PostgreSQL\Trustify.Backend.Features.Providers.PostgreSQL.csproj" />
     <ProjectReference Include="..\Trustify.Backend.FeaturesCore\Trustify.Backend.FeaturesCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logs\" />
   </ItemGroup>
 
 </Project>
