--- a/Trustify.Backend/Trustify.Backend.ImageGeneratorService/Trustify.Backend.ImageGeneratorService.csproj
+++ b/Trustify.Backend/Trustify.Backend.ImageGeneratorService/Trustify.Backend.ImageGeneratorService.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,8 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elastic.Serilog.Sinks" Version="8.11.1" />
-    <PackageReference Include="Ocelot" Version="23.2.2" />
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
@@ -21,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Europeana\" />
     <Folder Include="Logs\" />
-    <Folder Include="Middleware\" />
   </ItemGroup>
 
 </Project>
