Start configuration of ElasticSearch

--- a/Trustify.Backend/Trustify.Backend.ApiGateway/appsettings.Logging.json
+++ b/Trustify.Backend/Trustify.Backend.ApiGateway/appsettings.Logging.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Expressions" ],
+    "Using": [ "Serilog.Expressions" ,"Serilog.Sinks.File","Elastic.Serilog.Sinks"],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -48,20 +48,22 @@
             ]
           }
         }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://192.168.56.101:9200",
+          "username": "elastic",
+          "password": "llT*CdJw_XI+=UEb*5f-",
+          "period": 6,
+          "bufferLogShippingInterval": 2,
+          "indexFormat": "trustify-{0:yyyy.MM.dd}",
+          "autoRegisterTemplate": true,
+          "autoRegisterTemplateVersion": "ESv8",
+          "bufferBaseFilename": "./Logs/trustifylogs-buffer.json",
+          "connectionGlobalHeaders": "Authorization=Basic ZWxhc3RpYzpsbFQqQ2RKd19YSSs9VUViKjVmLQ=="
+        }
       }
     ]
-  },
-  "SerilogElasticsearch": {
-    "enabled": false,
-    "nodeUris": "https://localhost:5019",
-    "username": "elastic",
-    "password": "mHqQTSVi482stS3rs5gg",
-    "period": 6,
-    "bufferLogShippingInterval": 2,
-    "indexFormat": "pmlogs-{0:yyyy.MM.dd}",
-    "autoRegisterTemplate": true,
-    "autoRegisterTemplateVersion": "ESv7",
-    "connectionTimeout": 5,
-    "bufferBaseFilename": "./Logs/trflogs-buffer.json"
   }
 }
