--- a/Trustify.Backend/Trustify.Backend.ApiGateway/Trustify.Backend.ApiGateway.csproj
+++ b/Trustify.Backend/Trustify.Backend.ApiGateway/Trustify.Backend.ApiGateway.csproj
@@ -16,11 +16,13 @@
     <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="IoC\" />
     <Folder Include="Logs\" />
     <Folder Include="Middleware\" />
   </ItemGroup>
