--- a/Trustify.Backend/Trustify.Backend.AdminService/Trustify.Backend.AdminService.csproj
+++ b/Trustify.Backend/Trustify.Backend.AdminService/Trustify.Backend.AdminService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.7" />
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
