--- a/Trustify.Backend/Trustify.Backend.AdminService/appsettings.json
+++ b/Trustify.Backend/Trustify.Backend.AdminService/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "ApiVersion": "1.0",
+    "ApiTitle": "Trustify.Admin"
+  },
+  "KeycloakOptions": {
+    "Url": "http://192.168.56.101:8080/admin/realms/trustify",
+    "Realm": "trustify",
+    "Username": "admin",
+    "Password": "admin",
+    "RedirectUrlAfterProfileUpdate": "https://szz.dev.wordpress.optiweb.si/mojszz/",
+    "ClientIdForUrlRedirectionAfterProfileUpdate": "optiweb-test-client",
+    "ProfileUpdateLinkLifeSpanInSeconds": 604800,
+    "SendEmailToNewUsers": false
+  }
 }
