Implement admin-panel

--- a/Trustify.Backend/Trustify.Backend.AdminService/appsettings.json
+++ b/Trustify.Backend/Trustify.Backend.AdminService/appsettings.json
@@ -10,17 +10,21 @@
     "ApiVersion": "1.0",
     "ApiTitle": "Trustify.Admin"
   },
+  "Frontend": {
+    "BaseUrl": "https://192.168.100.6:4200",
+    "RedirectUrl": "https://192.168.100.6:4200/users",
+    "RedirectQueryParam": "returnUrl",
+    "ReturnUrl": "/api/v1.0/auth/login"
+  },
   "KeycloakOptions": {
-    "AdminClientId": "8695a1b6-eba4-45f4-8df6-989847e44984",
+    "AdminClientId": "7MC5AVJmRI1G8qIm4wxmRAlNhj7cxJa6",
+    "RefreshTokenUrl": "https://192.168.56.101:8443/realms/trustify/protocol/openid-connect/token",
+    "ClientId": "trustify_admin",
+    "ClientSecret": "7MC5AVJmRI1G8qIm4wxmRAlNhj7cxJa6",
     "AdminUrl": "https://192.168.56.101:8443/admin/realms",
+    "Authority": "https://192.168.56.101:8443/realms/trustify",
     "Url": "https://192.168.56.101:8443",
     "RolesUrlFormat": "/clients/{0}/roles",
-    "Realm": "trustify",
-    "Username": "admin",
-    "Password": "admin",
-    "RedirectUrlAfterProfileUpdate": "https://szz.dev.wordpress.optiweb.si/mojszz/",
-    "ClientIdForUrlRedirectionAfterProfileUpdate": "optiweb-test-client",
-    "ProfileUpdateLinkLifeSpanInSeconds": 604800,
-    "SendEmailToNewUsers": false
+    "Realm": "trustify"
   }
 }
