Upload image from image finder

--- a/Trustify.Backend/Trustify.Backend.ImageGeneratorService/appsettings.json
+++ b/Trustify.Backend/Trustify.Backend.ImageGeneratorService/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EuropeanaConfig": {
+    "BaseUrl": "https://api.europeana.eu/api/v2/search.json",
+    "SearchUrlSuffixFormat": "{0}&type=IMAGE",
+    "KeyParam": "wskey",
+    "SearchParam": "query",
+    "ApiKey": "turrymeter"
+  } 
 }
