--- a/Trustify.Backend/Trustify.Backend.ImageGeneratorService/Trustify.Backend.ImageGeneratorService.csproj
+++ b/Trustify.Backend/Trustify.Backend.ImageGeneratorService/Trustify.Backend.ImageGeneratorService.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Europeana\**" />
+    <Content Remove="Europeana\**" />
+    <EmbeddedResource Remove="Europeana\**" />
+    <None Remove="Europeana\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.0.1" />
@@ -21,7 +28,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Europeana\" />
     <Folder Include="Logs\" />
   </ItemGroup>
 
