--- a/Trustify.Backend/Trustify.Backend.FeaturesService/appsettings.json
+++ b/Trustify.Backend/Trustify.Backend.FeaturesService/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=DESKTOP-BBSNPOF\\MSSQLSERVER01;Database=Trustify;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;",
+     "Database": "Server=DESKTOP-BBSNPOF\\MSSQLSERVER01;Database=Trustify;User Id=Trustify;Password=1234;Trusted_Connection=False;TrustServerCertificate=True;",
+   // "Database": "Server=DESKTOP-BBSNPOF\\MSSQLSERVER01;Database=Trustify;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;",
     "DatabaseProvider": "SqlServer"
     //"Database": "Host=localhost;Database=Trustify;Username=postgres;Password=admin",
     //"DatabaseProvider": "PostgreSql"
