--- a/Trustify.Backend/Trustify.Backend.Features.Providers.MSSQL/Trustify.Backend.Features.Providers.MSSQL.csproj
+++ b/Trustify.Backend/Trustify.Backend.Features.Providers.MSSQL/Trustify.Backend.Features.Providers.MSSQL.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Scripts\ConfigureDatabase.sql" />
+    <None Remove="Scripts\GrantPermissions.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\ConfigureDatabase.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\GrantPermissions.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,7 +35,6 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
 
 </Project>
